--- a/.env.production
+++ b/.env.production
@@ -5,6 +5,7 @@ LDAP_URL="ldap://ldapstf.nus.edu.sg:389"
 LDAP_SEARCH_BASE="ou=Yale-NUS College,dc=stf,dc=nus,dc=edu,dc=sg"
 LDAP_RESP_USERNAME_FIELD="sAMAccountName"
 VUE_APP_BASE_URL="http://<>:443"
+VUE_APP_BASE_URL_LOCALHOST="http://localhost:443"
 VUE_APP_AUTH_ENDPOINT="http://<>:443/api/login"
 VUE_APP_GRAPHQL_HTTP="https://<>:8080/v1/graphql"
 EMAIL=yncbx153@u.nus.edu
